--- a/index.html
+++ b/index.html
@@ -24,6 +24,39 @@
 		</Transform>
 		<Viewpoint id='vp3' position="0 30 0" orientation='1,0,0,-1.57'> </Viewpoint>
 		
+		
+
+		<DirectionalLight direction='0 -1 0' intensity='0.1' shadowIntensity='0' ></DirectionalLight>
+		
+		<Group DEF='Spotlights'>
+			<Spotlight location="7.7 0.3 7.7" attenuation='0,0,0' direction="-4 5.5 -4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
+			<Spotlight location="-7.7 0.3 -7.7" attenuation='0,0,0' direction="4 5.5 4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
+			<Spotlight location="7.7 0.3 -7.7" attenuation='0,0,0' direction="-4 5.5 4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
+			<Spotlight location="-7.7 0.3 7.7" attenuation='0,0,0' direction="4 6 -4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
+		</Group>
+		
+		<Group DEF='PointLights'>
+			<PointLight intensity='0.3' color='1 0 0' location='4.04 0 4.1' radius='0.5'></PointLight>
+			<PointLight intensity='0.3' color='1 0 0' location='-4.04 0 4.1' radius='0.5'></PointLight>
+			<PointLight intensity='0.3' color='1 0 0' location='4.04 0 -4.1' radius='0.5'></PointLight>
+			<PointLight intensity='0.3' color='1 0 0' location='-4.04 0 -4.1' radius='0.5'></PointLight>
+		</Group>
+		
+		<!-- земля-->
+		<Transform translation='-22.5 -0.465 -22.5'>
+			<Shape>
+				<Appearance>
+					<Material ambientIntensity='0' diffuseColor='0,0,0' emissiveColor='0,0,0'></Material>
+					<ImageTexture url="grass.jpg"></ImageTexture>
+					<TextureTransform scale="10 10"/>
+				</Appearance>
+				<ElevationGrid xDimension="10" zDimension="10" height="0, 0.25, 0.1, 0.25, 0.1, 0.5, 0.25, 1, 0.5, 0.25, 0.25, 0.5, 1, 0, 0.5, 0.25, 0, 0, 0.25, 0.5, 0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.2, 0, 0.5, 0.25, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.25, 0.25, 0.5, 0.25, 0, 0.1, 0, 0.5 ,0, 1, 0.25, 0, 0.5, 1, 1.5, 0, 1, 1.5, 0, 1, 0.5, 0.25, 1.5, 0.4, 0.5, 0.5, 1, 0.25, 0, 0, 0.25, 0.5, 0.25" xSpacing="5.0" zSpacing="5.0" solid="false">
+				</ElevationGrid>
+			</Shape>
+		</Transform>
+		
+	<Transform DEF='Raketa'>
+
 		<Anchor url='#vp1'>
 			<Transform rotation='0 1 0 1.97' translation='0.65 0.1 1.4'>
 				<Shape>
@@ -62,35 +95,6 @@
 			</Transform>
 		</Anchor>
 
-		<DirectionalLight direction='0 -1 0' intensity='0.1' shadowIntensity='0' ></DirectionalLight>
-		
-		<Group DEF='Spotlights'>
-			<Spotlight location="7.7 0.3 7.7" attenuation='0,0,0' direction="-4 5.5 -4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
-			<Spotlight location="-7.7 0.3 -7.7" attenuation='0,0,0' direction="4 5.5 4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
-			<Spotlight location="7.7 0.3 -7.7" attenuation='0,0,0' direction="-4 5.5 4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
-			<Spotlight location="-7.7 0.3 7.7" attenuation='0,0,0' direction="4 6 -4" radius="100" intensity='0.9' cutOffAngle='1.1' beamWidth='1.0' shadowIntensity='0.3' shadowMapSize='2048' shadowCascades='10' shadowOffset='0.9' shadowSplitFactor='1'></Spotlight>
-		</Group>
-		
-		<Group DEF='PointLights'>
-			<PointLight intensity='0.3' color='1 0 0' location='4.04 0 4.1' radius='0.5'></PointLight>
-			<PointLight intensity='0.3' color='1 0 0' location='-4.04 0 4.1' radius='0.5'></PointLight>
-			<PointLight intensity='0.3' color='1 0 0' location='4.04 0 -4.1' radius='0.5'></PointLight>
-			<PointLight intensity='0.3' color='1 0 0' location='-4.04 0 -4.1' radius='0.5'></PointLight>
-		</Group>
-		
-		<!-- земля-->
-		<Transform translation='-22.5 -0.465 -22.5'>
-			<Shape>
-				<Appearance>
-					<Material ambientIntensity='0' diffuseColor='0,0,0' emissiveColor='0,0,0'></Material>
-					<ImageTexture url="grass.jpg"></ImageTexture>
-					<TextureTransform scale="10 10"/>
-				</Appearance>
-				<ElevationGrid xDimension="10" zDimension="10" height="0, 0.25, 0.1, 0.25, 0.1, 0.5, 0.25, 1, 0.5, 0.25, 0.25, 0.5, 1, 0, 0.5, 0.25, 0, 0, 0.25, 0.5, 0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.2, 0, 0.5, 0.25, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.25, 0.25, 0.5, 0.25, 0, 0.1, 0, 0.5 ,0, 1, 0.25, 0, 0.5, 1, 1.5, 0, 1, 1.5, 0, 1, 0.5, 0.25, 1.5, 0.4, 0.5, 0.5, 1, 0.25, 0, 0, 0.25, 0.5, 0.25" xSpacing="5.0" zSpacing="5.0" solid="false">
-				</ElevationGrid>
-			</Shape>
-		</Transform>
-		
 		<!-- верхние стабилизаторы-->
 		<Group DEF='UpperStabilizers'>
 			<Transform DEF='StabUpper' translation='0 9 1.24'>
@@ -331,7 +335,8 @@
 			<Transform USE='Turbine1'></Transform>
 			<Transform USE='Turbine2'> </Transform>
 		</Transform>
-	
+	</Transform>
+
 		<!-- площадка-->
 		<Shape>
 			<Appearance>
@@ -378,7 +383,7 @@
 						1 0 0 0.970142 0.242536 0 0.970142 0 0.242536 0.904534 0.301511 0.301511 0.83205 0 0.5547 0.666667 0.333333 0.666667 0.5547 0 0.83205 0.301511 0.301511 0.904534 0.242536 0 0.970142 0 0.242536 0.970142 0 0 1 0.83205 0.5547 0 0.666667 0.666667 0.333333 0.333333 0.666667 0.666667 0 0.5547 0.83205 0.5547 0.83205 0 0.301511 0.904534 0.301511 0 0.83205 0.5547 0.242536 0.970142 0 0 0.970142 0.242536 0 1 0 -0.242536 0 0.970142 -0.301511 0.301511 0.904534 -0.5547 0 0.83205 -0.666667 0.333333 0.666667 -0.83205 0 0.5547 -0.904534 0.301511 0.301511 -0.970142 0 0.242536 -0.970142 0.242536 0 -1 0 0 -0.333333 0.666667 0.666667 -0.666667 0.666667 0.333333 -0.83205 0.5547 0 -0.301511 0.904534 0.301511 -0.5547 0.83205 0 -0.242536 0.970142 0 0 -0.242536 0.970142 0.301511 -0.301511 0.904534 0.666667 -0.333333 0.666667 0.904534 -0.301511 0.301511 0.970142 -0.242536 0 0 -0.5547 0.83205 0.333333 -0.666667 0.666667 0.666667 -0.666667 0.333333 0.83205 -0.5547 0 0 -0.83205 0.5547 0.301511 -0.904534 0.301511 0.5547 -0.83205 0 0 -0.970142 0.242536 0.242536 -0.970142 0 0 -1 0 -0.970142 -0.242536 0 -0.904534 -0.301511 0.301511 -0.666667 -0.333333 0.666667 -0.301511 -0.301511 0.904534 -0.83205 -0.5547 0 -0.666667 -0.666667 0.333333 -0.333333 -0.666667 0.666667 -0.5547 -0.83205 0 -0.301511 -0.904534 0.301511 -0.242536 -0.970142 0 0 0 -1 0 0.242536 -0.970142 0.242536 0 -0.970142 0.301511 0.301511 -0.904534 0.5547 0 -0.83205 0.666667 0.333333 -0.666667 0.83205 0 -0.5547 0.904534 0.301511 -0.301511 0.970142 0 -0.242536 0 0.5547 -0.83205 0.333333 0.666667 -0.666667 0.666667 0.666667 -0.333333 0 0.83205 -0.5547 0.301511 0.904534 -0.301511 0 0.970142 -0.242536 -0.970142 0 -0.242536 -0.904534 0.301511 -0.301511 -0.83205 0 -0.5547 -0.666667 0.333333 -0.666667 -0.5547 0 -0.83205 -0.301511 0.301511 -0.904534 -0.242536 0 -0.970142 -0.666667 0.666667 -0.333333 -0.333333 0.666667 -0.666667 -0.301511 0.904534 -0.301511 0.904534 -0.301511 -0.301511 0.666667 -0.333333 -0.666667 0.301511 -0.301511 -0.904534 0 -0.242536 -0.970142 0.666667 -0.666667 -0.333333 0.333333 -0.666667 -0.666667 0 -0.5547 -0.83205 0.301511 -0.904534 -0.301511 0 -0.83205 -0.5547 0 -0.970142 -0.242536 -0.301511 -0.301511 -0.904534 -0.666667 -0.333333 -0.666667 -0.904534 -0.301511 -0.301511 -0.333333 -0.666667 -0.666667 -0.666667 -0.666667 -0.333333 -0.301511 -0.904534 -0.301511"></Coordinate>
 					</PointSet>
 					<Appearance>
-						<Material emissiveColor='1 0 0'></Material>
+						<Material DEF='CapMat'></Material>
 					</Appearance>
 				</Shape>
 			</Transform>
@@ -393,15 +398,30 @@
 			</Transform>
 		</Group>
 		
-		<!--Анимация турбины-->
-		<TimeSensor DEF='TS' cycleInterval='2' loop='true'></TimeSensor>
+		<!--Анимация вращения турбины-->
+		<TimeSensor DEF='TS1' cycleInterval='2' loop='true'></TimeSensor>
 		<OrientationInterpolator DEF='OrientInt' key='0 0.5 1' keyValue='0 0 1 0, 0 0 1 -3.14, 0 0 1 -6.28'></OrientationInterpolator>
-		<ROUTE fromNode='TS' fromField='fraction_changed' toNode='OrientInt' toField='set_fraction'>
+		<ROUTE fromNode='TS1' fromField='fraction_changed' toNode='OrientInt' toField='set_fraction'>
 		</ROUTE>
 		<ROUTE fromNode='OrientInt' fromField='value_changed' toNode='Turbine1' toField='set_rotation'>
 		</ROUTE>
+
+		<!--Анимация мигания фонарей-->
+		<TimeSensor DEF='TS2' cycleInterval='4' loop='true'></TimeSensor>
+          	<ColorInterpolator DEF='ColorSpot' key='0, 0.5, 1' keyValue='1 1 1, 1 0 0, 1 1 1'></ColorInterpolator>
+          	<ROUTE fromNode='TS2' fromField='fraction_changed' toNode='ColorSpot' toField='set_fraction'></ROUTE>
+          	<ROUTE fromNode='ColorSpot' fromField='value_changed' toNode='CapMat' toField='set_emissiveColor'></ROUTE>
 		
+		<!--Анимация взлета ракеты-->
+		<TimeSensor DEF='TS3' cycleInterval='3' loop='true'></TimeSensor>
+          	<PositionInterpolator DEF='PosInt' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1' keyValue='0 0 0, 0 0.25 0, 0 0.5 0, 0 0.75 0, 0 1 0, 0 1.25 0, 0 1.5 0, 0 1.75 0, 0 2 0, 0 2.25 0, 0 2.5 0'>
+          	</PositionInterpolator>
+          	<ROUTE fromNode='TS3' fromField='fraction_changed' toNode='PosInt' toField='set_fraction'>
+          	</ROUTE>
+          	<ROUTE fromNode='PosInt' fromField='value_changed' toNode='Raketa' toField='set_translation'>
+          	</ROUTE>
     </Scene>
   </X3D>
 </body>
 </html>
+
