--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
     <!-- мороженное-->
     <!-- вазочка--> 
-        <Transform translation = "-1 0 0">
+        <Transform DEF="ICEC" translation = "-1 0 0">
         <Transform rotation = "1 0 0 3.14">
         <Transform translation = "0 -0.75 0">
             <Shape>
@@ -272,11 +272,23 @@
             </Shape>    
         </Transform>
         </Transform>
-        </Transform>   
+
+
+    <!--палочка-->
+     <Transform translation = "0 1.15 0" rotation="0 0 1 -0.5">
+            <Shape>
+                <Appearance>
+                    <TextureTransform></TextureTransform>
+                    <ImageTexture url = "w2.png"></ImageTexture>
+                </Appearance>
+                <Box size="0.06 0.6 0.01" solid = "false"></Box>
+            </Shape>
+        </Transform> 
+        </Transform>  
 
 
     <!--текст-->
-            <Transform translation = "0.65 0.61 -0.9"  rotation="0 1 0 -0.8" >
+            <Transform translation = "-4 1.5 -2"  rotation="0 0 0 -0.8" >
                 <Shape>
                     <Appearance>
                          <Material diffuseColor = "0 0.7 0.6" ></Material>
@@ -287,16 +299,19 @@
             </Transform>
 
 
-    <!--палочка-->
-     <Transform translation = "-0.85 1.15 0" rotation="0 0 1 -0.5">
-            <Shape>
-                <Appearance>
-                    <TextureTransform></TextureTransform>
-                    <ImageTexture url = "w2.png"></ImageTexture>
-                </Appearance>
-                <Box size="0.06 0.6 0.01" solid = "false"></Box>
-            </Shape>
-        </Transform> 
+
+
+      
+      <TimeSensor DEF='TSICEC' cycleInterval='5' loop='true'></TimeSensor>
+      <positionInterpolator DEF='PosInt' key='0, 0.2, 0.4, 0.6, 0.8, 1'
+        keyValue='-1.3 0 0, -1.3 0 -1, 0.2 0 -1, 0.2 0 1, -1.3 0 1, -1.3 0 0'>
+      </positionInterpolator>
+      <ROUTE fromNode='TSICEC' fromField='fraction_changed' toNode='PosInt' toField='set_fraction'>
+      </ROUTE>
+      <ROUTE fromNode='PosInt' fromField='value_changed' toNode='ICEC' toField='set_translation'>
+      </ROUTE>
+
+
       </Scene>
     </X3D>
   </body> 
