Внесены корректировки для прохождения теста

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <Viewpoint ></Viewpoint>	         
 <Viewpoint fieldOfView='0.39'></Viewpoint>
 	<transform DEF="CAM1">
-<Viewpoint fieldOfView='0.39' position="-3.55594 6.09012 4.71759" orientation="-0.82634 -0.55188 -0.11218 0.98801" 
+<Viewpoint  position="-3.55594 6.09012 4.71759" orientation="-0.82634 -0.55188 -0.11218 0.98801" 
 	zNear="0.98150" zFar="16.53064" centerOfRotation="0.00000 0.00000 0.00000" fieldOfView="0.89000" description=""></Viewpoint>
 </transform>
 <Viewpoint position="-3.55594 6.09012 4.71759" orientation="-0.82634 -0.55188 -0.11218 0.98801" 
