--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	            <appearance>
 	                <material diffuseColor='.15 .15 .15'></material>
 	            </appearance>
-	            <cylinder></culinder>
+	            <cylinder></cylinder>
 	        </shape>
 	</transform>
 </transform>
@@ -190,7 +190,7 @@
 	            <appearance>
 	                <material diffuseColor='.75 .75 .75'></material>
 	            </appearance>
-	            <cylinder></culinder>
+	            <cylinder></cylinder>
 	        </shape>
 	</transform>
 	<transform DEF="Krygka2" translation="-1.2 .9 -0.24" scale=".1 .15 .1" rotation="0 1 0 1.57">
