--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <Appearance>
                         <Material diffuseColor="red"></Material>
                     </Appearance>
-                    <Text string="Поезд Санкт-Петербург - Кострома" solid="false" ></text>
+                    <Text string="Поезд Санкт-Петербург - Кострома" solid="false" ></Text>
                 </Shape>
             </transform>
         </Anchor>
