--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                     <Box Size="3 2 1"></Box>
                                 </Shape>
 
-<!--Гражднаская РЛС основание-->
+                                    <!--Гражднаская РЛС основание-->
                                 <Transform translation="-1 1 0">
                                     <Shape>
                                         <Appearance>
@@ -207,7 +207,7 @@
                                     </Shape>
                                 </Transform>
 
-<!--Гражднаская РЛС цилиндр-->
+                               <!--Гражднаская РЛС цилиндр-->
                                 <Transform translation="-1 2.5 0">
                                     <Shape>
                                         <Appearance>
@@ -234,7 +234,7 @@
                                 </Transform>
 
 
-<!--анимация рлс-->
+                                    <!--анимация рлс-->
                                 <TimeSensor DEF='Time3' cycleInterval='5' loop='true' enabled="true"></TimeSensor>
 
                                 <OrientationInterpolator DEF="OrientInt" key="0 0.5 1"
@@ -263,8 +263,8 @@
 
 
 
-
-                        </Group>
+                            </Transform>
+                         </Group>
                     </Group>
                 </Group>
 
