--- a/index.html
+++ b/index.html
@@ -1,13 +1,96 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>  
-    <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-    <title>Лабораторная работа 4</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
-  </head>
-  <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
+<html lang='ru'>
+
+<head>
+  <meta charset='utf-8' />
+  <title>ЛР 4</title>
+  <link rel='stylesheet' href="https://www.x3dom.org/download/dev/x3dom.css">
+  </link>
+  <script src="https://x3dom.org/download/dev/x3dom-full.debug.js"></script>
+
+</head>
+
+<body>
+  <h1>ЛР 4, Иванов А.С., гр. 4842</h1>
+  <X3D style='left: 0px; top: 0px; width: 100%; height: 100%; border: none;'>
+    <Scene>
+
+      <background skyAngle='1.5708' skyColor='0.6 0.75 1'>
+      </background>
+
+
+      <ViewPoint position='0 150 1000' fieldOfView='0.4'></ViewPoint>
+
+
+
+      <!-- Ground -->
+      <Transform translation='-100 -3000 0'>
+        <Shape>
+          <Appearance>
+            <ImageTexture url='tex/photo-1494344670326-077cb5f4d3e5.jpg' repeatT='true' repeatS='true'></ImageTexture>
+            <TextureTransform translation='1 1' scale='1 1'></TextureTransform>
+          </Appearance>
+
+          <!--<box size='20000 1 20000' />-->
+        </Shape>
+      </Transform>
+
+
+      <!-- Ground ElevationGrid -->
+      <Transform translation='-14000 -4000 -6000' rotation='0 1 0 0'>
+        <Shape>
+          <Appearance>
+            <ImageTexture url='tex/photo-1494344670326-077cb5f4d3e5.jpg' repeatT='true' repeatS='true'></ImageTexture>
+            <TextureTransform translation='1 1' scale='1 1'></TextureTransform>
+          </Appearance>
+          <ElevationGrid creaseAngle='1.57' solid='true' xDimension='5' zDimension='5' height="0, 0, 0, 0, 0,
+                    0,   0,    0,      -1000,  0,
+                    0,   0,    0,      0,      0,
+                    0,   0,    0,      0,      0,
+                    0,   0,    2400,   2000,    900" xSpacing="5000" zSpacing="5000">
+          </ElevationGrid>
+        </Shape>
+      </Transform>
+
+      <!-- UFO -->
+
+      <Transform DEF="Trans" scale='2 2 2' translation='-7000 100 0'>
+        <PointLight location='0 0 0' color='1 0 0' ambientIntensity='1' radius='1500' attenuation='1 0 0' global='true'
+          on='true' intensity='1'>
+        </PointLight>
+        <Shape>
+          <Appearance>
+            <Material def="Mat"></Material>
+          </Appearance>
+          <Extrusion crossSection="-35 -10 -21 29 22 29 36 -10 0 -35 -35 -10" scale="10 10 10 10 2 2"
+            spine="0 0 0 0 10 0 0 160 0">
+          </Extrusion>
+        </Shape>
+      </Transform>
+
+      <!-- Встраивание файла с самолётами -->
+      <Inline url="planes.x3d"></Inline>
+
+      <Fog type="Linear" color="0.3 0.3 0.4" visibilityRange="30000"></Fog>
+
+      <TimeSensor DEF="Time" cycleInterval="10" loop="true" enabled="true"></TimeSensor>
+
+      <OrientationInterpolator DEF="OrientInt" key="0 0.5 1" keyValue="0 1 0 0, 0 1 0 -3.14, 0 1 0 -6.28">
+      </OrientationInterpolator>
+      <PositionInterpolator DEF="PosInt" key="0 0.25 0.5 0.75 1"
+        keyValue="-7000 0 0, -7000 0 -1000, -7000 500 -1000, -7000 500 0, -7000 0 0">
+      </PositionInterpolator>
+      <ColorInterpolator DEF="ColInt" key="0 0.33 0.66 1" keyValue="1 0 0, 0 1 0, 0 0 1, 1 0 0">
+      </ColorInterpolator>
+
+      <ROUTE fromNode="Time" fromField="fraction_changed" toNode="PosInt" toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="PosInt" fromField="value_changed" toNode="Trans" toField="set_translation"></ROUTE>
+      <ROUTE fromNode="Time" fromField="fraction_changed" toNode="OrientInt" toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OrientInt" fromField="value_changed" toNode="Trans" toField="set_rotation"></ROUTE>
+      <ROUTE fromNode="Time" fromField="fraction_changed" toNode="ColInt" toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="ColInt" fromField="value_changed" toNode="Mat" toField="set_diffuseColor"></ROUTE>
+    </Scene>
+  </X3D>
+</body>
+
 </html>
