--- a/laba4.html
+++ b/laba4.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
     <style>
         section{
@@ -50,9 +50,9 @@
                 <transform translation="10 3 5">
                     // здание само
                     <Shape>
-                        <Appearance>
+                        <appearance>
                             <ImageTexture url=22.jpg></ImageTexture>
-                        </Appearance>
+                        </appearance>
                         <box size="18 6 8"></box>
                     </Shape>
                 </transform>
@@ -61,9 +61,9 @@
                     <Anchor url="https://www.opel.ru/" parameter="target='_self'">
                         // клик+сылка
                         <Shape>
-                            <Appearance>
+                            <appearance>
                                 <ImageTexture url=5.jpg></ImageTexture>
-                            </Appearance>
+                            </appearance>
                             <box size="2 2 8.1"></box>
                         </Shape>
                     </Anchor>
@@ -71,18 +71,18 @@
                 <transform translation="16 3 5">
                     // окна
                     <Shape>
-                        <Appearance>
+                        <appearance>
                             <ImageTexture url=5.jpg></ImageTexture>
-                        </Appearance>
+                        </appearance>
                         <box size="2 2 8.1"></box>
                     </Shape>
                 </transform>
                 <transform translation="10 2 8.05">
                     // Ворота
                     <Shape>
-                        <Appearance>
+                        <appearance>
                             <ImageTexture url=7.jpg></ImageTexture>
-                        </Appearance>
+                        </appearance>
                         <box size="7 4 2"></box>
                     </Shape>
                 </transform>
