--- a/laba4.html
+++ b/laba4.html
@@ -51,7 +51,7 @@
                     // здание само
                     <Shape>
                         <appearance>
-                            <ImageTexture url=22.jpg></ImageTexture>
+                            <ImageTexture url='22.jpg'></ImageTexture>
                         </appearance>
                         <box size="18 6 8"></box>
                     </Shape>
@@ -62,7 +62,7 @@
                         // клик+сылка
                         <Shape>
                             <appearance>
-                                <ImageTexture url=5.jpg></ImageTexture>
+                                <ImageTexture url='5.jpg'></ImageTexture>
                             </appearance>
                             <box size="2 2 8.1"></box>
                         </Shape>
@@ -72,7 +72,7 @@
                     // окна
                     <Shape>
                         <appearance>
-                            <ImageTexture url=5.jpg></ImageTexture>
+                            <ImageTexture url='5.jpg'></ImageTexture>
                         </appearance>
                         <box size="2 2 8.1"></box>
                     </Shape>
@@ -81,7 +81,7 @@
                     // Ворота
                     <Shape>
                         <appearance>
-                            <ImageTexture url=7.jpg></ImageTexture>
+                            <ImageTexture url='7.jpg'></ImageTexture>
                         </appearance>
                         <box size="7 4 2"></box>
                     </Shape>
