--- a/laba4.html
+++ b/laba4.html
@@ -120,7 +120,7 @@
                     // пол (асфальт)
                     <Shape>
                         <Appearance>
-                            <ImageTexture url=3.jpg></ImageTexture>
+                            <ImageTexture url='3.jpg'></ImageTexture>
                         </Appearance>
                         <ElevationGrid xDimension="14" zDimension="10"
                                        height="
