--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <appearance>
                                 <timeSensor DEF="time" cycleInterval="5" loop="true">
                                 </timeSensor>
-                                <PositionInterpolator DEF="move" key="0 0.5 0.75 0.85 1" keyValue="'14 0 12 '16 0 12 '14 0 12">
+                                <PositionInterpolator DEF="move" key="0 0.25 0.5" keyValue="'14 0 12 '16 0 12 '14 0 12">
                                 </PositionInterpolator>
                             </appearance>
                         </shape>
