--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <transform def="bl" translation='14 5 12' rotation='0 0 0 0'>
                     <shape>
                         <appearance>
-                            <ImageTexture url='123.jpg'></ImageTexture>
+                            <ImageTexture url='123.jpeg'></ImageTexture>
                             <material shininess='0.1'>
                             </material>
                             <timeSensor DEF="time" cycleInterval="5" loop="true">
