--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Laba_1</title>
-  <link rel="stylesheet" href="http://www.x3dom.org/download/dev/x3dom.css">
+  <link rel="stylesheet" href="http://www.x3dom.org/download/dev/x3dom.css"/>
   <script src="http://x3dom.org/release/x3dom-full.js"></script>
 
 
