--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <appearance>
                                     <imagetexture url='bat.jpg'></imagetexture>
                                     <material diffusecolor='0 1 0'>
-                                        <material>
+                                        </material>
                                 </appearance>
                                 <IndexedTriangleStripSet index='0 1 2 3 4 5 -1' solid='false'>
                                     <Coordinate point='0 0 0, 1 2 0, 2 0 0, 3 2 0, 4 0 0, 5 2 0'>
@@ -196,7 +196,7 @@
                 <SpotLight ambientIntensity='0' attenuation='1,0,0' beamWidth='0.78' color='1, 1, 1' cutOffAngle='3.14'
                     direction='0, 0, -1' global='true' intensity='1' location='0, 15, 30' radius='100'
                     shadowCascades='5' shadowFilterSize='2' shadowIntensity='0.3' shadowMapSize='1024'></SpotLight>
-            </Group>
+            </group>
 
             <fog visibilityrange='350' fogType="linear" color='1 0.2 0.3' isActive='false'></fog>
 
