--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <transform translation='-4.5 3 -7' rotation='1 0 0 1.5708'>
                             <shape USE='wing'></shape>
                         </transform>
-
+                    </transform>
                 </group>
 
 
