--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <SpotLight ambientIntensity='0' attenuation='1,0,0' beamWidth='0.78' color='1, 1, 1' cutOffAngle='3.14'
                     direction='0, 0, -1' global='true' intensity='1' location='0, 15, 30' radius='100'
                     shadowCascades='5' shadowFilterSize='2' shadowIntensity='0.3' shadowMapSize='1024'></SpotLight>
-            </group>
+            </Group>
 
             <fog visibilityrange='350' fogType="linear" color='1 0.2 0.3' isActive='false'></fog>
 
