--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Laba_1</title>
-  <link rel="stylesheet" href="http://www.x3dom.org/download/dev/x3dom.css"/>
-  <script src="http://x3dom.org/release/x3dom-full.js"></script>
+  <link rel="stylesheet" href="https://www.x3dom.org/download/dev/x3dom.css"/>
+  <script src="https://x3dom.org/release/x3dom-full.js"></script>
 
 
 </head>
