--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <shape>
                     <appearance>
                         <material diffuseColor='#D2691E'></material>
-                        <ImageTexture url="./derevo.jpg"></ImageTexture>
+                        <ImageTexture url="./derevo.png"></ImageTexture>
                     </appearance>
                     <box></box>
                 </shape>
